--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -638,6 +638,10 @@ h5 {
   visibility: visible;
 }
 
+.\!visible {
+  visibility: visible !important;
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -798,10 +802,6 @@ h5 {
   top: 50%;
 }
 
-.left-1\/2 {
-  left: 50%;
-}
-
 .-z-10 {
   z-index: -10;
 }
@@ -824,6 +824,18 @@ h5 {
 
 .z-0 {
   z-index: 0;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-\[120\] {
+  z-index: 120;
 }
 
 .col-auto {
@@ -866,6 +878,11 @@ h5 {
 .-mx-4 {
   margin-left: -1rem;
   margin-right: -1rem;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mt-11 {
@@ -1012,6 +1029,34 @@ h5 {
   margin-top: 0px;
 }
 
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mb-40 {
+  margin-bottom: 10rem;
+}
+
+.mb-80 {
+  margin-bottom: 20rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
+}
+
+.mb-72 {
+  margin-bottom: 18rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -1064,8 +1109,8 @@ h5 {
   height: 5rem;
 }
 
-.h-\[72px\] {
-  height: 72px;
+.h-auto {
+  height: auto;
 }
 
 .w-auto {
@@ -1179,6 +1224,11 @@ h5 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.-translate-y-1 {
+  --tw-translate-y: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1193,6 +1243,10 @@ h5 {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -1352,6 +1406,22 @@ h5 {
   background-size: cover;
 }
 
+.bg-height-72 {
+  background-size: 100% 72px;
+}
+
+.bg-auto {
+  background-size: auto;
+}
+
+.bg-\[length\:736px_151px\] {
+  background-size: 736px 151px;
+}
+
+.bg-\[length\:875px_151px\] {
+  background-size: 875px 151px;
+}
+
 .bg-scroll {
   background-attachment: scroll;
 }
@@ -1379,6 +1449,16 @@ h5 {
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+.object-none {
+  -o-object-fit: none;
+     object-fit: none;
 }
 
 .object-scale-down {
@@ -1440,8 +1520,65 @@ h5 {
   padding-right: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.py-14 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pt-11 {
+  padding-top: 2.75rem;
+}
+
+.pb-14 {
+  padding-bottom: 3.5rem;
 }
 
 .text-center {
@@ -1537,10 +1674,6 @@ h5 {
     margin-top: -5rem;
   }
 
-  .md\:-mb-20 {
-    margin-bottom: -5rem;
-  }
-
   .md\:block {
     display: block;
   }
@@ -1561,9 +1694,8 @@ h5 {
     width: 100%;
   }
 
-  .md\:-translate-y-20 {
-    --tw-translate-y: -5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .md\:flex-row {
+    flex-direction: row;
   }
 
   .md\:justify-around {
@@ -1588,14 +1720,6 @@ h5 {
 @media (min-width: 1024px) {
   .lg\:bottom-1\/2 {
     bottom: 50%;
-  }
-
-  .lg\:h-\[251px\] {
-    height: 251px;
-  }
-
-  .lg\:w-\[736px\] {
-    width: 736px;
   }
 }
 
