--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -846,6 +846,18 @@ h5 {
   bottom: -1rem;
 }
 
+.top-14 {
+  top: 3.5rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
 .left-1\/2 {
   left: 50%;
 }
@@ -858,68 +870,16 @@ h5 {
   top: 50%;
 }
 
-.left-\[98px\] {
-  left: 98px;
-}
-
-.bottom-\[200px\] {
-  bottom: 200px;
-}
-
-.top-14 {
-  top: 3.5rem;
-}
-
-.bottom-\[67px\] {
-  bottom: 67px;
-}
-
-.bottom-\[69px\] {
-  bottom: 69px;
-}
-
-.bottom-\[70px\] {
-  bottom: 70px;
-}
-
-.bottom-\[72px\] {
-  bottom: 72px;
-}
-
-.left-\[37px\] {
-  left: 37px;
-}
-
-.left-\[17px\] {
-  left: 17px;
+.bottom-\[104px\] {
+  bottom: 104px;
 }
 
 .left-\[20px\] {
   left: 20px;
 }
 
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.bottom-\[80px\] {
-  bottom: 80px;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.bottom-\[104px\] {
-  bottom: 104px;
-}
-
-.bottom-\[180px\] {
-  bottom: 180px;
-}
-
-.bottom-\[100px\] {
-  bottom: 100px;
+.left-\[98px\] {
+  left: 98px;
 }
 
 .-z-10 {
@@ -1265,18 +1225,6 @@ h5 {
   margin-bottom: 1.5rem;
 }
 
-.mb-\[60px\] {
-  margin-bottom: 60px;
-}
-
-.mt-\[83px\] {
-  margin-top: 83px;
-}
-
-.mb-\[252px\] {
-  margin-bottom: 252px;
-}
-
 .-ml-10 {
   margin-left: -2.5rem;
 }
@@ -1291,6 +1239,18 @@ h5 {
 
 .-mr-5 {
   margin-right: -1.25rem;
+}
+
+.mb-\[60px\] {
+  margin-bottom: 60px;
+}
+
+.mt-\[83px\] {
+  margin-top: 83px;
+}
+
+.mb-\[252px\] {
+  margin-bottom: 252px;
 }
 
 .block {
@@ -1426,6 +1386,10 @@ h5 {
   width: 5rem;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
 .w-1\/4 {
   width: 25%;
 }
@@ -1442,14 +1406,6 @@ h5 {
   width: 120px;
 }
 
-.w-\[450px\] {
-  width: 450px;
-}
-
-.w-\[368px\] {
-  width: 368px;
-}
-
 .w-\[140px\] {
   width: 140px;
 }
@@ -1458,8 +1414,32 @@ h5 {
   width: 33.333333%;
 }
 
+.w-3\/5 {
+  width: 60%;
+}
+
+.w-\[224px\] {
+  width: 224px;
+}
+
 .w-2\/5 {
   width: 40%;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[450px\] {
+  width: 450px;
+}
+
+.w-\[368px\] {
+  width: 368px;
+}
+
+.w-\[88px\] {
+  width: 88px;
 }
 
 .w-\[331px\] {
@@ -1476,42 +1456,6 @@ h5 {
 
 .w-4\/5 {
   width: 80%;
-}
-
-.w-\[11\] {
-  width: 11;
-}
-
-.w-\[110\] {
-  width: 110;
-}
-
-.w-\[110\%\] {
-  width: 110%;
-}
-
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-\[88px\] {
-  width: 88px;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-\[224px\] {
-  width: 224px;
 }
 
 .w-\[150px\] {
@@ -1753,6 +1697,10 @@ h5 {
        column-gap: 60px;
 }
 
+.gap-y-4 {
+  row-gap: 1rem;
+}
+
 .place-self-end {
   place-self: end;
 }
@@ -1775,6 +1723,10 @@ h5 {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-clip {
+  overflow: clip;
 }
 
 .whitespace-normal {
@@ -1819,6 +1771,10 @@ h5 {
 
 .rounded-\[60px\] {
   border-radius: 60px;
+}
+
+.rounded-\[24px\] {
+  border-radius: 24px;
 }
 
 .border {
@@ -2411,6 +2367,18 @@ h5 {
   padding-bottom: 60px;
 }
 
+.pt-\[83px\] {
+  padding-top: 83px;
+}
+
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -2573,16 +2541,16 @@ h5 {
 }
 
 @media (min-width: 768px) {
-  .md\:fixed {
-    position: fixed;
-  }
-
   .md\:bottom-60 {
     bottom: 15rem;
   }
 
   .md\:bottom-9 {
     bottom: 2.25rem;
+  }
+
+  .md\:bottom-\[200px\] {
+    bottom: 200px;
   }
 
   .md\:top-1\/2 {
@@ -2595,10 +2563,6 @@ h5 {
 
   .md\:left-5 {
     left: 1.25rem;
-  }
-
-  .md\:bottom-\[200px\] {
-    bottom: 200px;
   }
 
   .md\:col-span-6 {
@@ -2666,16 +2630,16 @@ h5 {
     width: 60%;
   }
 
+  .md\:w-2\/5 {
+    width: 40%;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
   }
 
   .md\:w-1\/5 {
     width: 20%;
-  }
-
-  .md\:w-2\/5 {
-    width: 40%;
   }
 
   .md\:grid-cols-12 {
@@ -2718,16 +2682,12 @@ h5 {
     border-radius: 24px;
   }
 
-  .md\:bg-finish {
-    background-image: url('/main/finish.png');
+  .md\:bg-finish_1 {
+    background-image: url('/main/finish_1.png');
   }
 
   .md\:bg-start {
     background-image: url('/main/start.png');
-  }
-
-  .md\:bg-finish_1 {
-    background-image: url('/main/finish_1.png');
   }
 
   .md\:px-8 {
@@ -2742,6 +2702,10 @@ h5 {
 
   .md\:pl-5 {
     padding-left: 1.25rem;
+  }
+
+  .md\:pt-0 {
+    padding-top: 0px;
   }
 
   .md\:opacity-100 {
@@ -2780,6 +2744,10 @@ h5 {
 
   .lg\:w-2\/5 {
     width: 40%;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .lg\:grid-cols-12 {
